--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,10 @@
     <string name="content_description_backdrop">Backdrop Images</string>
     <string name="content_description_poster">Poster Images</string>
 
+    <!-- For Floating Action Buttons -->
+    <string name="fab_favorite">Favorite</string>
+    <string name="fab_sort_default">@string/fab_sort_by_popularity</string>
+    <string name="fab_sort_by_popularity">Most Popular</string>
+    <string name="fab_sort_by_rating">Top Rated</string>
 
 </resources>
