--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">PopularMovies</string>
-    <string name="title_activity_detail">Movie Detail</string>
+    <string name="title_activity_detail"> </string>
 
     <string name="action_share">Share</string>
 
